k8s-deployment-strats/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld
  namespace: shadow
spec:
  ports:
  - port: 80
    targetPort: 3000
    name: http
  selector:
    app: helloworld
