k8s-deployment-strats/shadow-dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: helloworld
  namespace: shadow
spec:
  host: helloworld
  subsets:
  - name: v3
    labels:
      version: v3
  - name: v4
    labels:
      version: v4

#DESTINATION RULE
